--- a/index.html
+++ b/index.html
@@ -17,5 +17,14 @@
 
 <body>
     <div id="app"></div>
+    <div id="components-demo">
+        <button-counter></button-counter>
+        <button-counter></button-counter>
+        <button-counter></button-counter>
+        <button-counter></button-counter>
+
+    </div>
     <script src="/dist/build.js"></script>
+
+
 </body>
