--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  * @version: 
  * @Author: luohongwen
  * @Date: 2020-05-28 14:54:56
- * @LastEditTime: 2020-05-29 15:57:59
+ * @LastEditTime: 2020-06-11 17:18:25
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -23,6 +23,10 @@
         <button-counter></button-counter>
         <button-counter></button-counter>
 
+    </div>
+    <div id="mvvm">
+        <input v-model="text" id="test"></input>
+        <div id="test1"></div>
     </div>
     <script src="/dist/build.js"></script>
 
