--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  * @version: 
  * @Author: luohongwen
  * @Date: 2020-05-28 14:54:56
- * @LastEditTime: 2020-06-11 17:18:25
+ * @LastEditTime: 2020-09-09 18:36:11
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -28,6 +28,7 @@
         <input v-model="text" id="test"></input>
         <div id="test1"></div>
     </div>
+    <div id="main"></div>
     <script src="/dist/build.js"></script>
 
 
